syntax = "proto3";
package andromeda.internft.v1alpha1;

import "andromeda/internft/v1alpha1/types.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

// Query defines the module's Query service.
service Query {
  // Params queries the module params.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/params";
  }

  // Class queries a class.
  rpc Class(QueryClassRequest) returns (QueryClassResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}";
  }

  // Classes queries all classes.
  rpc Classes(QueryClassesRequest) returns (QueryClassesResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes";
  }

  // Trait queries a trait of a class.
  rpc Trait(QueryTraitRequest) returns (QueryTraitResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}/traits/{trait_id}";
  }

  // Traits queries all traits of a class.
  rpc Traits(QueryTraitsRequest) returns (QueryTraitsResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}/traits";
  }

  // NFT queries an NFT.
  rpc NFT(QueryNFTRequest) returns (QueryNFTResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}/nfts/{nft_id}";
  }

  // NFTs queries all NFTs.
  rpc NFTs(QueryNFTsRequest) returns (QueryNFTsResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}/nfts";
  }

  // Property queries a property of a class.
  rpc Property(QueryPropertyRequest) returns (QueryPropertyResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}/nfts/{nft_id}/properties/{property_id}";
  }

  // Properties queries all properties of a class.
  rpc Properties(QueryPropertiesRequest) returns (QueryPropertiesResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}/nfts/{nft_id}/properties";
  }

  // Owner queries the owner of an NFT.
  rpc Owner(QueryOwnerRequest) returns (QueryOwnerResponse) {
    option (google.api.http).get = "/andromeda/internft/v1alpha1/classes/{class_id}/nfts/{nft_id}/owner";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // the parameters of the module
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryClassRequest is the request type for the Query/Class RPC method.
message QueryClassRequest {
  // the identifier of a class
  string class_id = 1;
}

// QueryClassResponse is the response type for the Query/Class RPC method.
message QueryClassResponse {
  // the corresponding class
  Class class = 1;
}

// QueryClassesRequest is the request type for the Query/Classes RPC method.
message QueryClassesRequest {
  // optional pagination for the request
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryClassesResponse is the response type for the Query/Classes RPC method.
message QueryClassesResponse {
  // all the classes
  repeated Class classes = 1 [(gogoproto.nullable) = false];

  // pagination in the response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryTraitRequest is the request type for the Query/Trait RPC method.
message QueryTraitRequest {
  // the identifier of a class
  string class_id = 1;

  // the identifier of a trait
  string trait_id = 2;
}

// QueryTraitResponse is the response type for the Query/Trait RPC method.
message QueryTraitResponse {
  // the corresponding trait
  Trait trait = 1;
}

// QueryTraitsRequest is the request type for the Query/Traits RPC method.
message QueryTraitsRequest {
  // the identifier of a class
  string class_id = 1;

  // optional pagination for the request
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryTraitsResponse is the response type for the Query/Traits RPC method.
message QueryTraitsResponse {
  // all the traits of the corresponding class
  repeated Trait traits = 1 [(gogoproto.nullable) = false];

  // pagination in the response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryNFTRequest is the request type for the Query/NFT RPC method.
message QueryNFTRequest {
  // the identifier of a class
  string class_id = 1;

  // the identifier of an NFT
  string nft_id = 2;
}

// QueryNFTResponse is the response type for the Query/NFT RPC method.
message QueryNFTResponse {
  // the corresponding NFT
  NFT nft = 1;
}

// QueryNFTsRequest is the request type for the Query/NFTs RPC method.
message QueryNFTsRequest {
  // the identifier of a class
  string class_id = 1;

  // optional pagination for the request
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryNFTsResponse is the response type for the Query/NFTs RPC method.
message QueryNFTsResponse {
  // all the nfts of the corresponding class
  repeated NFT nfts = 1 [(gogoproto.nullable) = false];

  // pagination in the response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryPropertyRequest is the request type for the Query/Property RPC method.
message QueryPropertyRequest {
  // the identifier of a class
  string class_id = 1;

  // the identifier of an NFT
  string nft_id = 2;

  // the identifier of a property
  string property_id = 3;
}

// QueryPropertyResponse is the response type for the Query/Property RPC method.
message QueryPropertyResponse {
  // the corresponding property
  Property property = 1;
}

// QueryPropertiesRequest is the request type for the Query/Properties RPC method.
message QueryPropertiesRequest {
  // the identifier of a class
  string class_id = 1;

  // the identifier of an NFT
  string nft_id = 2;

  // optional pagination for the request
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryPropertiesResponse is the response type for the Query/Properties RPC method.
message QueryPropertiesResponse {
  // all the properties of the corresponding NFT
  repeated Property properties = 1 [(gogoproto.nullable) = false];

  // pagination in the response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryOwnerRequest is the request type for the Query/Owner RPC method.
message QueryOwnerRequest {
  // the identifier of a class
  string class_id = 1;

  // the identifier of an NFT
  string nft_id = 2;
}

// QueryOwnerResponse is the response type for the Query/Owner RPC method.
message QueryOwnerResponse {
  // the owner of the corresponding NFT
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
