syntax = "proto3";
package andromeda.internft.v1alpha1;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";

import "andromeda/internft/v1alpha1/types.proto";

// Msg defines the module's Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // Send defines a method to send an nft from one account to another account.
  rpc Send(MsgSend) returns (MsgSendResponse);

  // NewClass defines a method to create a class.
  rpc NewClass(MsgNewClass) returns (MsgNewClassResponse);

  // UpdateClass defines a method to update a class.
  rpc UpdateClass(MsgUpdateClass) returns (MsgUpdateClassResponse);

  // MintNFT defines a method to mint an nft.
  rpc MintNFT(MsgMintNFT) returns (MsgMintNFTResponse);

  // BurnNFT defines a method to burn an nft.
  rpc BurnNFT(MsgBurnNFT) returns (MsgBurnNFTResponse);

  // UpdateNFT defines a method to update an nft.
  rpc UpdateNFT(MsgUpdateNFT) returns (MsgUpdateNFTResponse);
}

// MsgSend is the Msg/Send request type.
message MsgSend {
  option (cosmos.msg.v1.signer) = "sender";

  // sender of the nft
  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // recipient of the nft
  string recipient = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // nft to send
  NFT nft = 3 [(gogoproto.nullable) = false];
}

// MsgSendResponse is the Msg/Send response type.
message MsgSendResponse {}

// MsgNewClass is the Msg/NewClass request type.
message MsgNewClass {
  // owner of the new class
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // traits of the new class
  repeated Trait traits = 2 [(gogoproto.nullable) = false];

  // app specific metadata of the new class (optional)
  google.protobuf.Any data = 3;
}

// MsgNewClassResponse is the Msg/NewClass response type.
message MsgNewClassResponse {
  // identifier of the new class
  string class_id = 1;
}

// MsgUpdateClass is the Msg/UpdateClass request type.
message MsgUpdateClass {
  // identifier of a class
  string class_id = 1;

  // app specific metadata of the class (optional)
  google.protobuf.Any data = 2;
}

// MsgUpdateClassResponse is the Msg/UpdateClass response type.
message MsgUpdateClassResponse {}

// MsgMintNFT is the Msg/MintNFT request type.
message MsgMintNFT {
  // identifier of a class
  string class_id = 1;

  // properties of the new nft
  repeated Property properties = 2 [(gogoproto.nullable) = false];

  // recipient of the new nft
  string recipient = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgMintNFTResponse is the Msg/MintNFT response type.
message MsgMintNFTResponse {
  // identifier of the new nft
  string id = 1
	[(cosmos_proto.scalar) = "cosmos.Int",
	 (gogoproto.customtype) = "cosmossdk.io/math.Uint",
	 (gogoproto.nullable) = false];
}

// MsgBurnNFT is the Msg/BurnNFT request type.
message MsgBurnNFT {
  // owner of the nft
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // nft to burn
  NFT nft = 2 [(gogoproto.nullable) = false];
}

// MsgBurnNFTResponse is the Msg/BurnNFT response type.
message MsgBurnNFTResponse {}

// MsgUpdateNFT is the Msg/UpdateNFT request type.
message MsgUpdateNFT {
  // nft to update
  NFT nft = 1 [(gogoproto.nullable) = false];

  // new properties
  repeated Property properties = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateNFTResponse is the Msg/UpdateNFT response type.
message MsgUpdateNFTResponse {}
